hphp/test/zend/good/ext/gettext/tests/44938.php.skipif
<?hh
if (!extension_loaded("gettext")) {
	die("skip\n");
}