hphp/test/zend/bad/ext/standard/tests/strings/htmlentities02.php.skipif
<?php
$result = (bool)setlocale(LC_CTYPE, "fr_FR.ISO-8859-15", "fr_FR.ISO8859-15", 'fr_FR@euro');
if (!$result) {
	die("skip setlocale() failed\n");
}
?>